--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -43,10 +43,10 @@ interval=10
 signal=10
 command=/usr/share/i3blocks/volume 5 pulse
 
-[brightness]
-label=
-command=xrandr --verbose | grep -m 1 -i brightness | cut -f2 -d ' '
-interval=30
+#[brightness]
+#label=
+#command=xrandr --verbose | grep -m 1 -i brightness | cut -f2 -d ' '
+#interval=30
 
 [disk]
 label=
