--- a/i3/config
+++ b/i3/config
@@ -245,7 +245,7 @@ bindsym XF86PowerOff mode "$mode_system"
 bindsym $mod+shift+w mode "$mode_system"
 set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
 mode "$mode_system" {
-    bindsym l exec --no-startup-id i3exit lock, mode "default"
+    bindsym l exec --no-startup-id i3lock -i ~/wp1.png, mode "default"
     bindsym s exec --no-startup-id i3exit suspend, mode "default"
     bindsym u exec --no-startup-id i3exit switch_user, mode "default"
     bindsym e exec --no-startup-id i3exit logout, mode "default"
@@ -283,7 +283,7 @@ mode "resize" {
 }
 
 # Lock screen
-bindsym $mod+shift+x exec --no-startup-id blurlock
+bindsym $mod+shift+x exec --no-startup-id i3lock -i ~/wp1.png
 
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
