--- a/dotfiles/nvim/coc-settings.json
+++ b/dotfiles/nvim/coc-settings.json
@@ -33,9 +33,8 @@
             //https://github.com/neoclide/coc.nvim/wiki/Language-servers#vimerbmarkdown
             //Daha sonra yeniden kurarken efm konfigrasyonunu yapmayı unutma
             "command": "efm-langserver",
-            "args": [],
+            "args": ["-c", "$HOME/.config/efm-langserver/config.yaml"],
             // custom config path
-            // "args": ["-c", "/path/to/your/config.yaml"],
             "filetypes": [
                 "vim",
                 "eruby",
